--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.402.0",
     "next": "15.0.0-rc.0",
     "next-themes": "^0.3.0",
+    "novel": "^0.5.0",
     "prisma": "^5.16.1",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-cropper": "^2.3.3",
@@ -52,6 +53,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
